--- a/Client/MainPage.xaml
+++ b/Client/MainPage.xaml
@@ -6,8 +6,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    <Grid>
+        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+            <Grid Width="800" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+                <Button Content="Button" HorizontalAlignment="Left" Margin="245,366,0,0" VerticalAlignment="Top" Height="86" Width="337"/>
+            </Grid>
+        </ScrollViewer>
     </Grid>
 </Page>
