--- a/Client/LoginPage.xaml
+++ b/Client/LoginPage.xaml
@@ -12,8 +12,8 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <TextBlock HorizontalAlignment="Left" Margin="103,149,0,0" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top" Height="20" Width="67"/>
-        <ComboBox HorizontalAlignment="Left" Margin="180,144,0,0" VerticalAlignment="Top" Width="120" Height="32"/>
-        <Button Content="Login" HorizontalAlignment="Center" Margin="0,181,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="UserComboBox" HorizontalAlignment="Left" Margin="180,144,0,0" VerticalAlignment="Top" Width="120" Height="32"/>
+        <Button Content="Login" HorizontalAlignment="Center" Margin="0,181,0,0" VerticalAlignment="Top" Tapped="Button_Tapped"/>
 
     </Grid>
 </Page>
